build out the simple CRUD for Employee

--- a/src/main/resources/templates/header.vm
+++ b/src/main/resources/templates/header.vm
@@ -16,3 +16,11 @@
 </head>
 <body>
 <main>
+
+    <h1><img src="https://avatars2.githubusercontent.com/u/67816555?s=50&v=4"> CS 440 - Databases</h1>
+
+    <h4 style="color:red">$!message</h4>
+
+    <a href="/">Home</a> | <a href="/employees">Employees</a> | <a href="/tracks">Tracks</a> | <a href="/artists">Artists</a>
+
+    <hr/>
