--- a/src/main/resources/templates/employees/show.vm
+++ b/src/main/resources/templates/employees/show.vm
@@ -1,6 +1,6 @@
 #parse('templates/header.vm')
 
-<h1>Employee</h1>
+<h2>Employee</h2>
 
 <table>
     <thead>
@@ -12,17 +12,21 @@
     <tbody>
     <tr>
         <td>FirstName</td>
-        <td>$employee.FirstName</td>
+        <td>$!employee.FirstName</td>
     </tr>
     <tr>
         <td>LastName</td>
-        <td>$employee.lastName</td>
+        <td>$!employee.lastName</td>
     </tr>
     <tr>
         <td>Email</td>
-        <td>$employee.email</td>
+        <td>$!employee.email</td>
     </tr>
     </tbody>
 </table>
+
+<a href="/employees/$employee.EmployeeId/edit">[Edit Employee]</a>
+<a href="/employees/$employee.EmployeeId/delete">[Delete Employee]</a>
+
 
 #parse('templates/footer.vm')
