--- a/src/main/resources/templates/header.vm
+++ b/src/main/resources/templates/header.vm
@@ -19,7 +19,8 @@
 
     <h1><img src="https://avatars2.githubusercontent.com/u/67816555?s=50&v=4"> CS 440 - Databases</h1>
 
-    <h4 style="color:red">$!message</h4>
+    <h4 style="color:green">$!message</h4>
+    <h4 style="color:red">$!error</h4>
 
     <a href="/">Home</a> | <a href="/employees">Employees</a> | <a href="/tracks">Tracks</a> | <a href="/artists">Artists</a>
     | <a href="/playlists">Playlists</a> | <a href="/customers">Customers</a> | <a href="/invoices">Invoices</a>
