Artists and Album work

--- a/src/main/resources/templates/header.vm
+++ b/src/main/resources/templates/header.vm
@@ -22,7 +22,8 @@
     <h4 style="color:green">$!message</h4>
     <h4 style="color:red">$!error</h4>
 
-    <a href="/">Home</a> | <a href="/employees">Employees</a> | <a href="/tracks">Tracks</a> | <a href="/artists">Artists</a>
-    | <a href="/playlists">Playlists</a> | <a href="/customers">Customers</a> | <a href="/invoices">Invoices</a>
+    <a href="/">Home</a> <br/>
+    <b>Music</b> - <a href="/artists">Artists</a> | <a href="/albums">Albums</a> | <a href="/tracks">Tracks</a> | <a href="/playlists">Playlists</a> <br/>
+    <b>Business</b> - <a href="/employees">Employees</a>  |  <a href="/customers">Customers</a> | <a href="/invoices">Invoices</a>
 
     <hr/>
