--- a/src/main/resources/templates/artists/index.vm
+++ b/src/main/resources/templates/artists/index.vm
@@ -19,9 +19,8 @@
     </tbody>
 </table>
 
-<div>
-    $web.prevPage() -- $web.nextPage($artists)
-</div>
+$web.pagingWidget($artists)
+
 
 <a href="/artists/new">[Create New Artist]</a>
 
