--- a/src/main/resources/templates/employees/index.vm
+++ b/src/main/resources/templates/employees/index.vm
@@ -22,8 +22,9 @@
         #end
     </tbody>
 </table>
-$web.prevPage() -- $web.nextPage($employees)
-<br/><br/>
+
+$web.pagingWidget($employees)
+
 
 <a href="/employees/new">[Create New Employee]</a>
 
