--- a/src/main/resources/templates/invoices/index.vm
+++ b/src/main/resources/templates/invoices/index.vm
@@ -29,9 +29,7 @@
     </tbody>
 </table>
 
-<div>
-    $web.prevPage() -- $web.nextPage($invoices)
-</div>
+$web.pagingWidget($invoices)
 
 
 #parse('templates/footer.vm')
