--- a/src/main/resources/templates/index.vm
+++ b/src/main/resources/templates/index.vm
@@ -1,6 +1,39 @@
 #parse('templates/header.vm')
 
 <p>Welcome to the CS 440 Database web project.</p>
+
 <p>You can use the navigation above to look at various entities in the chinook.db</p>
+
+<h3>Project Requirements</h3>
+
+<p>Below are the requirements for the CS440 Project, broken out by section.</p>
+
+<h4>Artists</h4>
+<ul>
+    <li>All CRUD operations</li>
+    <li>Show all albums on the artist details page, with links to the album</li>
+</ul>
+
+<h4>Albums</h4>
+<ul>
+    <li>All CRUD operations</li>
+    <li>Show all tracks on the artist details page, with links to the track</li>
+</ul>
+
+<h4>Tracks</h4>
+<ul>
+    <li>All CRUD operations</li>
+    <li>A Simple Search that includes artist name and album title in the search criteria</li>
+    <li>Extra Credit: Make Simple Search Live Search</li>
+    <li>An advanced search with at least three fields to search by</li>
+</ul>
+
+<h4>Playlists</h4>
+<ul>
+    <li>Display only, both list and detail views</li>
+    <li>Detail view should show associated tracks, paged</li>
+</ul>
+
+
 
 #parse('templates/footer.vm')
