--- a/src/main/resources/templates/index.vm
+++ b/src/main/resources/templates/index.vm
@@ -11,21 +11,27 @@
 <h4>Artists</h4>
 <ul>
     <li>All CRUD operations</li>
-    <li>Show all albums on the artist details page, with links to the album</li>
+    <li>Implement Paging</li>
+    <li><code>Artist.validate()</code></li>
+    <li>Show all albums on the artist details page, with links to their album</li>
 </ul>
 
 <h4>Albums</h4>
 <ul>
     <li>All CRUD operations</li>
-    <li>Show all tracks on the artist details page, with links to the track</li>
+    <li>Implement Paging</li>
+    <li><code>Albums.validate()</code></li>
+    <li>Show all tracks on the album details page, with links to the tracks</li>
 </ul>
 
 <h4>Tracks</h4>
 <ul>
     <li>All CRUD operations</li>
+    <li><code>Albums.validate()</code></li>
     <li>A Simple Search that includes artist name and album title in the search criteria</li>
     <li>Extra Credit: Make Simple Search Live Search</li>
-    <li>An advanced search with at least three fields to search by</li>
+    <li>Implement advanced search with at least three fields to search by</li>
+    <li>Tracks should include Artist and Album name in display</li>
 </ul>
 
 <h4>Playlists</h4>
@@ -34,6 +40,28 @@
     <li>Detail view should show associated tracks, paged</li>
 </ul>
 
+<h4>Employees</h4>
+<ul>
+    <li>All CRUD operations</li>
+    <li>Implement Paging</li>
+    <li><code>Albums.validate()</code></li>
+    <li>Detail view should show boss, Reports and Customers (no paging)</li>
+    <li>Employee Report 1: An employee tree (written inefficiently currently, should issue one query)</li>
+    <li>Employee Report 2: A sales leader report: each employee with the number of invoices associated sorted
+    most to least</li>
+</ul>
 
+<h4>Customers</h4>
+<ul>
+    <li>Display only, both list and detail views</li>
+    <li>Detail view should show associated invoices, paged</li>
+</ul>
+
+<h4>Invoices</h4>
+<ul>
+    <li>Display only, both list and detail views</li>
+    <li>Detail view should show associated invoice items, paged</li>
+    <li>Invoice items should include track name, album name, artist name</li>
+</ul>
 
 #parse('templates/footer.vm')
