--- a/src/main/resources/templates/artists/show.vm
+++ b/src/main/resources/templates/artists/show.vm
@@ -17,6 +17,24 @@
     </tbody>
 </table>
 
+<h4>Albums</h4>
+<table>
+    <thead>
+    <tr>
+        <th>Album ID</th>
+        <th>Title</th>
+    </tr>
+    </thead>
+    <tbody>
+        #foreach( $album in $artist.albums )
+        <tr>
+            <td><a href="/albums/$album.AlbumId">$album.AlbumId</a></td>
+            <td>$!album.Title</td>
+        </tr>
+        #end
+    </tbody>
+</table>
+
 <a href="/artists/$artist.ArtistId/edit">[Edit Artist]</a>
 <a href="/artists/$artist.ArtistId/delete">[Delete Artist]</a>
 
