--- a/src/main/resources/templates/customers/show.vm
+++ b/src/main/resources/templates/customers/show.vm
@@ -22,6 +22,10 @@
         <td>Email</td>
         <td>$!customer.email</td>
     </tr>
+    <tr>
+        <td>Rep</td>
+        <td><a href="/employees/$!customer.SupportRepId">$!customer.SupportRep.Email</a> </td>
+    </tr>
     </tbody>
 </table>
 
