--- a/src/main/resources/templates/employees/show.vm
+++ b/src/main/resources/templates/employees/show.vm
@@ -25,6 +25,29 @@
     </tbody>
 </table>
 
+<h3>Customers</h3>
+
+<table>
+    <thead>
+    <tr>
+        <th>Customer ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+    </tr>
+    </thead>
+    <tbody>
+        #foreach( $customer in $employee.Customers )
+        <tr>
+            <td><a href="/customers/$customer.CustomerId">$customer.CustomerId</a></td>
+            <td>$!customer.FirstName</td>
+            <td>$!customer.LastName</td>
+            <td>$!customer.Email</td>
+        </tr>
+        #end
+    </tbody>
+</table>
+
 <a href="/employees/$employee.EmployeeId/edit">[Edit Employee]</a>
 <a href="/employees/$employee.EmployeeId/delete">[Delete Employee]</a>
 
