--- a/src/main/resources/templates/playlists/show.vm
+++ b/src/main/resources/templates/playlists/show.vm
@@ -17,6 +17,32 @@
     </tbody>
 </table>
 
+
+<h4>Tracks</h4>
+<table>
+    <thead>
+    <tr>
+        <th>Track ID</th>
+        <th>Name</th>
+        <th>Milliseconds</th>
+        <th>Bytes</th>
+        <th>UnitPrice</th>
+    </tr>
+    </thead>
+    <tbody>
+        #foreach( $track in $playlist.tracks )
+        <tr>
+            <td><a href="/tracks/$track.TrackId">$track.TrackId</a></td>
+            <td>$!track.Name</td>
+            <td>$!track.Milliseconds</td>
+            <td>$!track.Bytes</td>
+            <td>$!track.UnitPrice</td>
+        </tr>
+        #end
+    </tbody>
+</table>
+
+
 <a href="/playlists/$playlist.PlaylistId/edit">[Edit Playlist]</a>
 <a href="/playlists/$playlist.PlaylistId/delete">[Delete Playlist]</a>
 
