--- a/src/main/resources/templates/index.vm
+++ b/src/main/resources/templates/index.vm
@@ -29,9 +29,10 @@
     <li>All CRUD operations</li>
     <li><code>Albums.validate()</code></li>
     <li>A Simple Search that includes artist name and album title in the search criteria</li>
-    <li>Extra Credit: Make Simple Search Live Search</li>
     <li>Implement advanced search with at least three fields to search by</li>
     <li>Tracks should include Artist and Album name in display</li>
+    <li>Implment "Order By" headers in list view</li>
+    <li>Extra Credit: Make Simple Search Live Search</li>
 </ul>
 
 <h4>Playlists</h4>
@@ -46,7 +47,7 @@
     <li>Implement Paging</li>
     <li><code>Albums.validate()</code></li>
     <li>Detail view should show boss, Reports and Customers (no paging)</li>
-    <li>Employee Report 1: An employee tree (written inefficiently currently, should issue one query)</li>
+    <li>Employee Report 1: An employee tree (written inefficiently currently, optimize to issue only one query)</li>
     <li>Employee Report 2: A sales leader report: each employee with the number of invoices associated sorted
     most to least</li>
 </ul>
