--- a/src/main/resources/templates/tracks/index.vm
+++ b/src/main/resources/templates/tracks/index.vm
@@ -17,8 +17,10 @@
     <tr>
         <th>Track ID</th>
         <th>Name</th>
-        <th>Milliseconds</th>
-        <th>Bytes</th>
+        <th>Album</th>
+        <th>ArtistName</th>
+        <th><a href="?o=Milliseconds">Milliseconds</a></th>
+        <th><a href="?o=Bytes">Bytes</a></th>
         <th>UnitPrice</th>
     </tr>
     </thead>
@@ -27,6 +29,8 @@
         <tr>
             <td><a href="/tracks/$track.TrackId">$track.TrackId</a></td>
             <td>$!track.Name</td>
+            <td>$!track.TODOAlbumTitle</td>
+            <td>$!track.TODOArtistName</td>
             <td>$!track.Milliseconds</td>
             <td>$!track.Bytes</td>
             <td>$!track.UnitPrice</td>
