--- a/src/main/resources/templates/tracks/form.vm
+++ b/src/main/resources/templates/tracks/form.vm
@@ -39,6 +39,14 @@
         <td>Album</td>
         <td>$web.select('Album', 'Title', $track.AlbumId, false)</td>
     </tr>
+    <tr>
+        <td>Media Type</td>
+        <td>$web.select('MediaType', 'Name', $track.MediaTypeId, true)</td>
+    </tr>
+    <tr>
+        <td>Genre</td>
+        <td>$web.select('Genre', 'Name', $track.GenreId, true)</td>
+    </tr>
     </tbody>
 </table>
 <button>Save</button>
