--- a/src/main/resources/templates/tracks/search.vm
+++ b/src/main/resources/templates/tracks/search.vm
@@ -22,6 +22,14 @@
                 <td>$web.select('Artist', 'Name', $!web.param('ArtistId'), true)</td>
             </tr>
             <tr>
+                <td>Media Type</td>
+                <td>$web.select('MediaType', 'Name', $!web.param('MediaTypeId'), true)</td>
+            </tr>
+            <tr>
+                <td>Genre</td>
+                <td>$web.select('Genre', 'Name', $!web.param('GenreId'), true)</td>
+            </tr>
+            <tr>
                 <td>Runtime (Min Seconds)</td>
                 <td><input type="number" placeholder="Minimum Runtime"
                            name="min"
