show number of connections in request logging

--- a/src/main/resources/templates/tracks/index.vm
+++ b/src/main/resources/templates/tracks/index.vm
@@ -29,8 +29,8 @@
         <tr>
             <td><a href="/tracks/$track.TrackId">$track.TrackId</a></td>
             <td>$!track.Name</td>
-            <td>$!track.TODOAlbumTitle</td>
-            <td>$!track.TODOArtistName</td>
+            <td>$!track.AlbumTitle</td>
+            <td>$!track.ArtistName</td>
             <td>$!track.Milliseconds</td>
             <td>$!track.Bytes</td>
             <td>$!track.UnitPrice</td>
