--- a/src/main/resources/templates/tracks/index.vm
+++ b/src/main/resources/templates/tracks/index.vm
@@ -1,6 +1,6 @@
 #parse('templates/header.vm')
 
-<h3>Tracks</h3>
+<h3>Tracks <small>($!totalTracks Total)</small></h3>
 
 <div style="padding: 12px">
     <form>
