--- a/src/yardstick-main/resources/views/inc/navbar.edge
+++ b/src/yardstick-main/resources/views/inc/navbar.edge
@@ -10,7 +10,7 @@
             <a class="nav-link" href="/home">Home</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/comments">Comments</a>
+            <a class="nav-link" href="/comments">Comments API</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/team">Team</a>
