--- a/src/yardstick-main/resources/views/releases.edge
+++ b/src/yardstick-main/resources/views/releases.edge
@@ -1,4 +1,9 @@
 @layout('main')
 @section('content')
-<h1> Coming Soon! </h1>
+<h1> Releases and Documentation </h1>
+<h2> 1.0 Beta Release </h2>
+<p> Updated March 7th, 2021: </p>
+<li> Users can now input their username and comments in the Comments API page </li>
+<li> Users can now submit their comments, along with their username to the potential database </li>
+<li> Uploaded the design of the web application. </li>
 @endsection
