--- a/src/yardstick-main/resources/views/main.edge
+++ b/src/yardstick-main/resources/views/main.edge
@@ -7,6 +7,7 @@
   {{ style('https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css') }}
   <title>specialproject.io Comment API</title>
   <link rel="icon" href="pyramid.png">
+  @!section('header')
 </head>
 <body>
     
