--- a/src/yardstick-main/resources/views/releases.edge
+++ b/src/yardstick-main/resources/views/releases.edge
@@ -6,4 +6,18 @@
 <li> Users can now input their username and comments in the Comments API page </li>
 <li> Users can now submit their comments, along with their username to the potential database </li>
 <li> Uploaded the design of the web application. </li>
+<h2> 1.1 Release </h2>
+<p> Updated March 15th, 2021: </p>
+<li> /home is the front page of the website </li>
+<li> /team includes page team members </li>
+<li> /releases includes the developer documentation of the project
+<li> github repository: https://github.com/ryanhansen2222/esof423-s2021 </li>
+<h2> 1.2 Release </h2>
+<p> Updated March 19th, 2021: </p>
+<li> /root page of the site: esof423.cs.montana.edu:/4006 </li>
+<li> /comments includes the landing page for the comment sign in section </li>
+<li> /comments/display adds the comment functionality of the website
+<li> /commentController.js includes all the functional componenets of the comment API (redirects, database integration, reactions). </li>
+<li> src/database includes the database repository for the API </li>
+<li> routes.js provides all the routing of URL within the site </li>
 @endsection
