--- a/src/yardstick-archive/resources/views/index.edge
+++ b/src/yardstick-archive/resources/views/index.edge
@@ -8,7 +8,7 @@ SpecialProject.io Comment Api
 <h1>
     All the stuff
 </h1>
-
+<h2>Comments per page {{ comments.perPage }} </h2>
 @each(comment in comments.data)
 <div class="job-container">
 <div class="blank"></div>
