--- a/src/yardstick-archive/resources/views/layouts/main.edge
+++ b/src/yardstick-archive/resources/views/layouts/main.edge
@@ -18,7 +18,8 @@
       <ul>
         <li><a href="/">Home</a></li>
         @loggedIn
-        <li><a href="/post-a-comment">Comment</a></li>
+        <li><a href="/post-a-comment">My Comments</a></li>
+        <li><a href="/post-a-video">My Videos</a></li>
         <li><a href="/logout">Logout</a></li>
 
         @else
