--- a/src/yardstick-archive/resources/views/watchvideo.edge
+++ b/src/yardstick-archive/resources/views/watchvideo.edge
@@ -1,7 +1,7 @@
 @layout('layouts.main')
 
   @section('title')
-  Comments - Share your thoughts
+  Watch Now
   @endsection
 
   @section('extracss')
