--- a/src/yardstick-archive/resources/views/index.edge
+++ b/src/yardstick-archive/resources/views/index.edge
@@ -13,7 +13,7 @@ SpecialProject.io Comment Api
 <div class="job-container">
 <div class="blank"></div>
     <div class="info">
-      <h4>{{comment.username}} ({{comment.user_id}}) Says: </h4>
+      <a href="" title="user_id:{{comment.user_id}}">{{comment.username}}</a>
       <p>{{comment.text}}</p>
         <h6>About video {{comment.video_id}}</h6>
     </div>
