--- a/src/yardstick-archive/resources/views/auth/login.edge
+++ b/src/yardstick-archive/resources/views/auth/login.edge
@@ -9,7 +9,7 @@
   @endsection
 
   @section('content')
-<h1>Login now</h1>
+<h1>Log In</h1>
 
 <div class="job-container">
 @if(flashMessage('loginError'))
