--- a/src/yardstick-archive/resources/views/index.edge
+++ b/src/yardstick-archive/resources/views/index.edge
@@ -6,7 +6,7 @@ SpecialProject.io Comment Api
 
 @section('content')
 <h1>
-    All the stuff
+    Display Comments
 </h1>
 
 @each(comment in comments)
