--- a/src/yardstick-archive/resources/views/layouts/main.edge
+++ b/src/yardstick-archive/resources/views/layouts/main.edge
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Hello Adonis</title>
+  <title>Group 6 - Comment API </title>
+  <link rel="icon" href="pyramid.png">
   {{ style('style') }}
 
   @!section('extracss')
@@ -13,10 +14,14 @@
 </head>
 <body>
   <header>
-    <a href="/" id="logo">LOGO</a>
+    <a href="/home">
+      <img src="pyramid.png" id="logo"> 
+    </a>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/home">Home</a></li>
+        <li><a href="/devdoc">Documentation</a></li>
+        <li><a href="/comment">Comment API</a></li>
         @loggedIn
         <li><a href="/post-a-comment">Comment</a></li>
         <li><a href="/logout">Logout</a></li>
