--- a/src/yardstick-archive/resources/views/devdoc.edge
+++ b/src/yardstick-archive/resources/views/devdoc.edge
@@ -29,7 +29,7 @@
 <li> The README file on the project's Github includes a detailed developer documentation for local development </li>
 <li> We will be using Swagger for our API development and testing <a href="https://app.swaggerhub.com/apis/AlecVanderKolk/423API/0.1">here </a>.</li>
 <li> <a href="uml/423ClassDiagram.pdf" target="_blank">Class UML Diagram</a> </li>
-<li> <a href="uml/423DatabaseDiagram.pdf" target="_blank">Database UML Diagram</a> </li>
+<li> <a href="uml/423Database.pdf" target="_blank">Database UML Diagram</a> </li>
 <li> <a href="uml/423PackageDiagram.pdf" target="_blank">Package UML Diagram</a> </li>
 
 
