--- a/src/yardstick-archive/resources/views/layouts/main.edge
+++ b/src/yardstick-archive/resources/views/layouts/main.edge
@@ -21,7 +21,7 @@
       <ul>
         <li><a href="/home">Home</a></li>
         <li><a href="/devdoc">Documentation</a></li>
-        <li><a href="/comment">Comment API</a></li>
+        <li><a href="/comments">Comment API</a></li>
         @loggedIn
         <li><a href="/post-a-comment">Comment</a></li>
         <li><a href="/logout">Logout</a></li>
