only manage own comments

--- a/src/yardstick-archive/resources/views/edit.edge
+++ b/src/yardstick-archive/resources/views/edit.edge
@@ -28,7 +28,7 @@
   @endif
 
 
-  <button type="submit">Update Job</button><br>
+  <button type="submit">Submit</button><br>
 </form>
 </div>
   @endsection
