--- a/src/yardstick-archive/resources/views/layouts/commentdisplay.edge
+++ b/src/yardstick-archive/resources/views/layouts/commentdisplay.edge
@@ -1,8 +1,7 @@
 <ul>
-  <li><a href="{{ route('CommentController.like', { id: comment.id }) }}">Like</a></li>
+  <li><a href="{{ route('CommentController.like', { id: comment.id }) }}">Like {{comment.likes}}</a></li>
   @if(auth.user.id == comment.user_id)
-<p> {{video.id}}</p>
   <li><a href="{{ route('CommentController.delete',{ id: comment.id }) }}">Delete</a></li>
-  <li><a href="{{ route('CommentController.edit',{ id: comment.id }) }}">Edit</a></li>
+  <li><a href="{{ route('CommentController.edit',{ id: comment.id, video_id: video.id }) }}">Edit</a></li>
   @endif
 </ul>
