--- a/src/yardstick-archive/resources/views/watchvideo.edge
+++ b/src/yardstick-archive/resources/views/watchvideo.edge
@@ -25,7 +25,7 @@
 <span>{{ flashMessage('message') }}</span>
 @endif
 
-<form action="{{ route('CommentController.create', { id: 3 }) }}" method="POST">
+<form action="{{ route('CommentController.create', { id: 1 }) }}" method="POST">
   {{ csrfField() }}
 
   <label for="text"></label>
@@ -55,7 +55,7 @@
 
   <h3>{{ comment.username }}: </h3>
   <p>{{ comment.text }}</p>
-@!component('layouts.commentdisplay', comment = comment, auth = auth, presenter = 'UserDataPresenter')
+@!component('layouts.commentdisplay', comment = comment, auth = auth, video=video, presenter = 'UserDataPresenter')
 
 
 </div>
