Fix home route, add some documentation

--- a/src/yardstick-archive/resources/views/devdoc.edge
+++ b/src/yardstick-archive/resources/views/devdoc.edge
@@ -31,6 +31,16 @@
 <li> <a href="uml/423ClassDiagram.pdf" target="_blank">Class UML Diagram</a> </li>
 <li> <a href="uml/423Database.pdf" target="_blank">Database UML Diagram</a> </li>
 <li> <a href="uml/423PackageDiagram.pdf" target="_blank">Package UML Diagram</a> </li>
+  <h2> API Docs </h2>
+  <li> NOTE: we structured some of the most useful components of our API into COMPONENTS</li>
+  <li> Component: pagination --- abstractly add pagination to any JSON (list) data</li>
+  <li> above is code to abstractly paginate any JSON_DATA in a .edge file</li>
+  <li> Liking comments is enabled through 'CommentController.like'</li>
+  <li> Create, Read, Update, Delete (CRUD): Video(CRUD), Comments(CRUD), and User(CR)</li>
+  <li>Component: commentdisplay --- dynamic options depending on user logged in</li>
+  <li>Comment on Videos</li>
+  <li>Browse Videos</li>
+  <li>Watch Videos</li>
 
 
 @endsection
