--- a/src/yardstick-archive/resources/views/getstarted.edge
+++ b/src/yardstick-archive/resources/views/getstarted.edge
@@ -1,7 +1,39 @@
 @layout('layouts.main')
 @section('content')
 <h1> Getting Started </h1>
-<p> Work-in Progress: This is to store the detailed installation process from Github </p>
+{{-- <h2> Work-in Progress: This is to store the detailed installation process from Github </h2> --}}
+{{-- 
+<p> The special project API runs on an adonis framework with a sqlite as the database. It requires a number of dependencies including adonisjs, sqlite3, adonis-swagger, @adonisjs-ignitor, nodemon, Node.js > 8.0.0, and NPM > 3.0.0. The project was built on a Linux platform, but can be adapted to work on other operating systems. To use the API, first clone the repository at https://github.com/ryanhansen2222/esof423-s2021. Within this repository, navigate to /src. The adonis project to use within this folder will be named /yardstick-archive. Assuming all dependencies are installed, running nodemon server.js from the command line while in the directory yardstick-archive should start the project. This will initially be set up to run on the local host, but the .env file can be modified to match the needs of the user. Upon serving the application, the home screen should display the following page: </p>
+<h2> image </h2>
+<img src="splash.png" id="imgtest">
+<p> From this point, a user can view the documentation for the API, login, or sign up for the site. Upon creating an account or logging in, the home page changes to the following: </p>
+<h2> image </h2>
+<p> Note that the difference between the previous two pages is the addition of the “My Videos” tab and the “Login” and “Sign Up” tabs have been replaced by “Logout.” The core functionality of the API works through the “My Videos” and “Videos” views. From within “My Videos,” new media can be uploaded to the site. Note that the media upload still needs to be implemented for this section and currently video creation simply creates a video title and description. Once a video has been created it can be edited or deleted from the “My Videos” page. This functionality is outlined by the screenshot below: </p>
+<h2> image </h2>
+<p> Once a video has been posted to the site, users can comment on the video under the “Videos” tab. “Videos” contains a paginated view of videos posted to the site and users can comment by selecting a video and filling out the associated GUI on the /watchvideo view. Once a comment is posted, it appears in a paginated list of comments under the video content. Comments can be liked by any user, but comments can only be edited or deleted by the user that created them. This functionality should appear as in the following image: <p>
+<h2> image </h2>
+<p> The yardstick-archive repository can be copied and modified directly to meet the needs of the user. Alternatively database migrations, routes, edge files, controllers, and other required files can be used individually to meet the user’s needs from within their own adonis project.</p>
+--}}
+<p> The special project API runs on an adonis framework with a sqlite as the database. 
+It requires a number of dependencies including adonisjs, sqlite3, adonis-swagger, @adonisjs-ignitor, nodemon, 
+Node.js > 8.0.0, and NPM > 3.0.0. The project was built on a Linux platform, but can be adapted to work on other 
+operating systems. To use the API, first clone the repository at https://github.com/ryanhansen2222/esof423-s2021. Within this 
+repository, navigate to /src. The adonis project to use within this folder will be named /yardstick-archive. Assuming all 
+dependencies are installed, running nodemon server.js from the command line while in the directory yardstick-archive should 
+start the project. This will initially be set up to run on the local host, but the .env file can be modified to match the needs 
+of the user. From this point, a user can view the documentation for the API, login, or sign up for the site. Note that the difference 
+between the previous two pages is the addition of the “My Videos” tab and the “Login” and “Sign Up” tabs have been replaced by “Logout.” 
+The core functionality of the API works through the “My Videos” and “Videos” views. From within “My Videos,” new media can be uploaded to 
+the site. Note that the media upload still needs to be implemented for this section and currently video creation simply creates a video 
+title and description. Once a video has been created it can be edited or deleted from the “My Videos” page. Once a video has been posted 
+to the site, users can comment on the video under the “Videos” tab. The “Videos” tab contains a paginated view of videos posted to the site 
+and users can comment by selecting a video and filling out the associated GUI on the /watchvideo view. Once a comment is posted, it appears 
+in a paginated list of comments under the video content. Comments can be liked by any user, but comments can only be edited or deleted by the 
+user that created them. The yardstick-archive repository can be copied and modified directly to meet the needs of the user. Alternatively 
+database migrations, routes, edge files, controllers, and other required files can be used individually to meet the user’s needs from within 
+their own adonis project. The core functionality of the API is available to the user through the controller classes, and these could be adapted to an existing 
+codebase so long as objects are provided for comments, videos, and users. For further documentation of the API with images showing it running properly, view the readME.md 
+file in the project repository at https://github.com/ryanhansen2222/esof423-s2021.</p>
 
 @endsection
 
