Added use case pdf link to devdoc.edge

--- a/src/yardstick-archive/resources/views/devdoc.edge
+++ b/src/yardstick-archive/resources/views/devdoc.edge
@@ -27,10 +27,11 @@
 <li> /signup routes new user to sign up for the comment API </li>
 <li> /comment now links with the sqlite3 database and provides a running feed of comments </li>
 <li> The README file on the project's Github includes a detailed developer documentation for local development </li>
-<li> We will be using Swagger for our API development and testing <a href="https://app.swaggerhub.com/apis/AlecVanderKolk/423API/0.1">here </a>.</li>
+<li> We will be using Swagger to create openAPI 3 specification <a href="https://app.swaggerhub.com/apis/AlecVanderKolk/423APIDefinition/0.2">here </a>.</li>
 <li> <a href="uml/423ClassDiagram.pdf" target="_blank">Class UML Diagram</a> </li>
 <li> <a href="uml/423Database.pdf" target="_blank">Database UML Diagram</a> </li>
 <li> <a href="uml/423PackageDiagram.pdf" target="_blank">Package UML Diagram</a> </li>
+<li> <a href="uml/423UseCaseDiagram.pdf" target="_blank">Use Case UML Diagram</a> </li>
   <h2> API Docs </h2>
   <li> NOTE: we structured some of the most useful components of our API into COMPONENTS</li>
   <li> Component: pagination --- abstractly add pagination to any JSON (list) data</li>
