added documenation and final commit for FCR

--- a/src/yardstick/resources/views/videos.edge
+++ b/src/yardstick/resources/views/videos.edge
@@ -6,10 +6,9 @@ SpecialProject.io Comment Api
 
 @section('content')
 <h1>
-    Please navigate to /home or click the Home tab. This page is not in use but is being routed from Dan's class page. 
+    Display Videos
 </h1>
-<h2> Dan: can you link our project to http://esof423.cs.montana.edu:4006/home. </h2>
-
+<h2>Top Videos </h2>
 @each(video in videos.data)
 <div class="job-container">
 <div class="blank"></div>
