--- a/src/yardstick/resources/views/devdoc.edge
+++ b/src/yardstick/resources/views/devdoc.edge
@@ -22,26 +22,28 @@
 <li> src/database includes the database repository for the API </li>
 <li> routes.js provides all the routing of URL within the site </li>
 <h2> 1.3 Feature Complete Release </h2>
-<p> Updated March 29th, 2021: </p>
+<p> Updated April 2nd, 2021: </p>
+<li> The README file on the project's Github includes a detailed developer documentation for local development </li>
 <li> /login routes to the user login page </li>
 <li> /signup routes new user to sign up for the comment API </li>
-<li> /comment now links with the sqlite3 database and provides a running feed of comments </li>
-<li> The README file on the project's Github includes a detailed developer documentation for local development </li>
+<li> /videos now links with the sqlite3 database and provides a running feed of videos and comments (if posted) </li>
+<li> /post-a-video allows user to post a video based on title and description </li>
+<li> added likes feature for comments </li>
+<h2> 1.3.1 Final Feature Release API development </h2>
+<p> Updated April 2nd, 2021: </p>
+<li> Component: pagination --- abstractly add pagination to any JSON (list) data</li>
+<li> above is code to abstractly paginate any JSON_DATA in a .edge file</li>
+<li> Liking comments is enabled through 'CommentController.like'</li>
+<li> Create, Read, Update, Delete (CRUD): Video(CRUD), Comments(CRUD), and User(CR)</li>
+<li>Component: commentdisplay --- dynamic options depending on user logged in</li>
+<li>Comment on Videos</li>
+<li>Browse Videos</li>
+<li>Watch Videos</li>
 <li> We will be using Swagger to create openAPI 3 specification <a href="https://app.swaggerhub.com/apis/AlecVanderKolk/423APIDefinition/0.2">here </a>.</li>
+<h2> 1.3.2 Final Feature Release Design Documents </h2>
+<p> Updated April 2nd, 2021: </p>
 <li> <a href="uml/423ClassDiagram.pdf" target="_blank">Class UML Diagram</a> </li>
 <li> <a href="uml/423Database.pdf" target="_blank">Database UML Diagram</a> </li>
 <li> <a href="uml/423PackageDiagram.pdf" target="_blank">Package UML Diagram</a> </li>
 <li> <a href="uml/423UseCaseDiagram.pdf" target="_blank">Use Case UML Diagram</a> </li>
-  <h2> API Docs </h2>
-  <li> NOTE: we structured some of the most useful components of our API into COMPONENTS</li>
-  <li> Component: pagination --- abstractly add pagination to any JSON (list) data</li>
-  <li> above is code to abstractly paginate any JSON_DATA in a .edge file</li>
-  <li> Liking comments is enabled through 'CommentController.like'</li>
-  <li> Create, Read, Update, Delete (CRUD): Video(CRUD), Comments(CRUD), and User(CR)</li>
-  <li>Component: commentdisplay --- dynamic options depending on user logged in</li>
-  <li>Comment on Videos</li>
-  <li>Browse Videos</li>
-  <li>Watch Videos</li>
-
-
 @endsection
